-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.6.1
-
64a283a98 (dev), 36f01b7f5 (6.7), 4883d2f59 (6.6), 382e5bcb2 (tqtc/lts-6.5)
When grabbing a QTableView column and dragging it to reorder the columns, the QTableView always scrolls to the left and does not end scrolling when the column is released.
See the attached project, to reproduce grab a table column and drag it off the visible table, regardless of starting location or intended direction the table will scroll left and will not stop scrolling if let go.
Error is not observed in 5.15.x
- duplicates
-
QTBUG-113573 When dragging a header section it will no longer scroll when at the edge
-
- Closed
-
For Gerrit Dashboard: QTBUG-120055 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
525854,2 | QHeaderView: fix calculating dragPosition | dev | qt/qtbase | Status: MERGED | +2 | 0 |
526036,2 | QHeaderView: fix calculating dragPosition | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
526044,2 | QHeaderView: fix calculating dragPosition | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
526051,2 | QHeaderView: fix calculating dragPosition | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |